2005-07-07  Jim Huang  <jserv@kaffe.org>

	* pcmanx.desktop.in:
	New file. Rename from pcmanx.desktop.

	* Makefile.am,
	configure.ac:
	Add entries for pcmanx.desktop generation.

2005-07-06  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* data/Makefile.am:
	Add install-hook.

2005-07-06  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/Makefile.am:
	Add all necessary headers to Makefile.am.

2005-07-06  Jim Huang  <jserv@kaffe.org>

	* src/Makefile.am:
	Fixlet to previous changes.

2005-07-06  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/termdata.cpp (CTermData::UpdateDisplay),
	src/termview.cpp,
	src/widget.h,
	src/telnetview.cpp (CTelnetView::~CTelnetView),
	src/telnetcon.cpp:
	Minor bug fix.
	Temporarily disable dalayed screen update to prevent some problems.
	
	* src/mainframe.cpp (CMainFrame::SetCurView):
	Include the name of current connection in window title.

2005-07-07  Jim Huang  <jserv@kaffe.org>

	* src/Makefile.am,
	Makefile.am:
	Fixlet to missing EXTRA_DIST.
	Reported by PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>.

2005-07-06  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/telnetcon.cpp: Minor bug Fix.

	* src/sitelistdlg.cpp:
	(CSiteListDlg::OnSearch): Minor bug fix.

	* data/sitelist:
	Replace the site list with the latest one.

2005-07-06  Jim Huang  <jserv@kaffe.org>

	* src/configfile.cpp (CConfigFile::CConfigFile):
	Use DATADIR (%prefix%/share) as data dir instead of /etc.
	
	* src/Makefile.am: Likewise.

	* data/Makefile.am,
	Makefile.am,
	configure.ac:
	Add rules for site list file.

	* AUTHORS: Updated.

2005-07-06  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/telnetcon.cpp
	(CTelnetCon::OnClose): Add "auto reconnect" support.
	Fix lots of thread-related bugs.

2005-07-06  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/mainframe.cpp
	(CMainFrame::OnFont): Disable "style" in font selection dialog.

	* src/appconfig.cpp, src/pcmanx_pure_gtk2.cpp:
	Add "Show tray icon" preference.

	* src/generalprefpage.cpp: